# graffer

./: CMakeLists.txt  INSTALL  README
Docs/: CMakeLists.txt  Format.tex  Graffer.tex  restructure.txt
cmake/: FindGtk2Fortran.cmake  FindGtk3Fortran.cmake  FindPlplotF95.cmake
data/: CMakeLists.txt  c_tables.info  c_tables.tab  colours.table  graffer.desktop  graffer.man.in  graffer.rc
gdl/: CMakeLists.txt  doc_library.pro  gr_as_xa.pro  gr_as_xr.pro  gr_as_ya.pro  gr_as_yr.pro  gr_asc_save.pro  gr_auto_delete.pro  gr_autoscale.pro  gr_bin_ds.pro  gr_bin_ds_v3.pro  gr_bin_save.pro  gr_bin_txt.pro  gr_bin_txt_v3.pro  gr_byt_rd.pro  gr_cont_col_get.pro  gr_dbl_rd.pro  gr_flt_rd.pro  gr_font_remap.pro  gr_get_asc.pro  gr_get_bin.pro  gr_get_bin_v3.pro  gr_get_ds.pro  gr_get_full_dir.pro  gr_get_v1.pro  gr_int_rd.pro  gr_lon_rd.pro  gr_new_ds.pro  gr_rc_get.pro  gr_split_dir.pro  gr_str_rd.pro  graff_2d__define.pro  graff_add.pro  graff_annotate.pro  graff_clear.pro  graff_colours.pro  graff_convert.pro  graff_data__define.pro  graff_define__define.pro  graff_export.pro  (+24 more)
gdl/bitmaps/: 3floppy_unmount.xbm  CMakeLists.txt  Graffer.xbm  Graffer.xpm  custom.xbm  omit.xbm  ps0.xbm  ps1.xbm  ps10.xbm  ps11.xbm  ps12.xbm  ps13.xbm  ps14.xbm  ps15.xbm  ps16.xbm  ps17.xbm  ps18.xbm  ps2.xbm  ps3.xbm  ps4.xbm  ps5.xbm  ps6.xbm  ps7.xbm  ps8.xbm  ps9.xbm
gdl/definitions/: CMakeLists.txt  graff_2d__define.pro  graff_data__define.pro  graff_define__define.pro  graff_funct__define.pro  graff_hard__define.pro  graff_ids__define.pro  graff_key__define.pro  graff_opts__define.pro  graff_pfunct__define.pro  graff_style__define.pro  graff_text__define.pro  graff_trans__define.pro  graff_xydata__define.pro  graff_zdata__define.pro  graff_zfunct__define.pro
gdl/gui/: CMakeLists.txt  gr_app_w.pro  gr_append.pro  gr_axis_adv_menu.pro  gr_axis_menu.pro  gr_check_box.pro  gr_comment.pro  gr_cont_col_set.pro  gr_cont_menus.pro  gr_control_menu.pro  gr_cross_hair.pro  gr_curr_menu.pro  gr_custom_colour.pro  gr_ds_create.pro  gr_ds_menu.pro  gr_ds_menus.pro  gr_ds_pulldown.pro  gr_examine_tlv.pro  gr_fcopy_menu.pro  gr_fit_dset.pro  gr_fit_funct.pro  gr_font_list.pro  gr_func_copy.pro  gr_hardopts.pro  gr_image_write.pro  gr_img_menus.pro  gr_key_def.pro  gr_mk_colour_bm.pro  gr_mk_plmenus.pro  gr_name_wid.pro  gr_opt_set.pro  gr_pick_tlv.pro  gr_position.pro  gr_present.pro  gr_psym_bitm.pro  gr_show_colour.pro  gr_state.pro  gr_str_fun.pro  gr_td_mode.pro  gr_tlv_z.pro  (+29 more)
gdl/lib/: CMakeLists.txt  gr_ang_pts.pro  gr_as_xa.pro  gr_as_xr.pro  gr_as_ya.pro  gr_as_yr.pro  gr_asc_save.pro  gr_auto_delete.pro  gr_autoscale.pro  gr_bin_ds.pro  gr_bin_ds_v3.pro  gr_bin_save.pro  gr_bin_txt.pro  gr_bin_txt_v3.pro  gr_byt_rd.pro  gr_byt_val.pro  gr_cf_pieces.pro  gr_cont_col_get.pro  gr_dbl_rd.pro  gr_dbl_val.pro  gr_ds_erase.pro  gr_ds_transpose.pro  gr_err_type.pro  gr_find_program.pro  gr_find_viewer.pro  gr_flt_rd.pro  gr_flt_val.pro  gr_fun_read.pro  gr_get_asc.pro  gr_get_bin.pro  gr_get_bin_v3.pro  gr_get_ds.pro  gr_get_page.pro  gr_get_txt.pro  gr_get_v1.pro  gr_int_rd.pro  gr_int_val.pro  gr_lon_rd.pro  gr_lon_val.pro  gr_make_levels.pro  (+28 more)
gdl/plotlib/: CMakeLists.txt  gr_1dd_plot.pro  gr_1df_plot.pro  gr_2dd_plot.pro  gr_2df_plot.pro  gr_coord_convert.pro  gr_display_img.pro  gr_err_r.pro  gr_err_th.pro  gr_err_x.pro  gr_err_y.pro  gr_fra2norm.pro  gr_pl_axes.pro  gr_pl_key.pro  gr_pl_text.pro  gr_plot_object.pro  gr_reg2norm.pro  gr_symdef.pro  gr_time_fmt.pro  gr_tri_area.pro  graff_ctable.pro  graff_hard.pro
gdl/tools/: CMakeLists.txt  aspect.pro  fractile.pro  gr_cvttobm.pro  gr_interpol_ss.pro  gr_min_nz.pro  gr_strpad.pro  has_tag.pro  is_gdl.pro  match_in.pro  truth.pro
gdl/utils/: CMakeLists.txt  gr_update_xy.pro  gr_update_xy_old.pro  gr_update_z.pro  graff_add.pro  graff_annotate.pro  graff_convert.pro  graff_export.pro  graff_get_data.pro  graff_info.pro  graff_key.pro  graff_print.pro  graff_props.pro  graff_show.pro  graff_update.pro
gdl/widgets/: CMakeLists.txt  cw_enter.pro  cw_pdmenu_plus.pro  cw_spin_box.pro  gr_cw_bgroup.pro  gr_cw_filesel.pro
src/: CMakeLists.txt  gr_1d_opts.f90  gr_2d_opts.f90  gr_axis.f90  gr_axis_adv_widgets.f90  gr_axis_autoscale.f90  gr_axis_time_widgets.f90  gr_axis_widgets.f90  gr_cb_common.f90  gr_colour_widgets.f90  gr_colours.f90  gr_drawing.f90  gr_drawing_buttons.f90  gr_ds_copy_widgets.f90  gr_ds_data.f90  gr_ds_editor_widgets.f90  gr_ds_fit_widgets.f90  gr_ds_function_widgets.f90  gr_ds_merge_widgets.f90  gr_ds_reorder_widgets.f90  gr_ds_rescale_widgets.f90  gr_ds_selector.f90  gr_ds_selector_widgets.f90  gr_ds_tools.f90  gr_ds_widgets.f90  gr_eval.f90  gr_file.f90  gr_file_ascii.f90  gr_fitting.f90  gr_general.f90  gr_general_comment_widgets.f90  gr_general_corner_widgets.f90  gr_general_key_widgets.f90  gr_general_widgets.f90  gr_gui.f90  gr_hardcopy.f90  gr_idl_types.f90  gr_interfaces.f90  gr_menu_hc_widgets.f90  gr_menu_opt_widgets.f90  (+25 more)
