configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/init.sh.in"
  "${CMAKE_CURRENT_BINARY_DIR}/graffer_gdl_init.sh"
  @ONLY
  )
configure_file(
  "${CMAKE_CURRENT_SOURCE_DIR}/init.csh.in"
  "${CMAKE_CURRENT_BINARY_DIR}/graffer_gdl_init.csh"
  @ONLY
  )

install(FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/doc_library.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_as_xa.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_as_xr.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_as_ya.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_as_yr.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_auto_delete.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_autoscale.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_ds.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_ds_v3.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_save.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_txt.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_txt_v3.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_byt_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_dbl_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_flt_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_asc.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_bin.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_bin_v3.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_ds.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_full_dir.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_v1.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_int_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_lon_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_new_ds.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_rc_get.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_split_dir.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_str_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_2d__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_add.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_annotate.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_clear.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_convert.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_data__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_define__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_export.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_funct__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_get.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_get_data.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_get_rec.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_hard__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_ids__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_init.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_key__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_msg.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_open.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_opts__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_pfunct__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_props.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_put_rec.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_style__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_text__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_trans__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_version.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_xydata__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_zdata__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_zfunct__define.pro"
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/graffer/lib
)

install(FILES
  "${CMAKE_CURRENT_BINARY_DIR}/graffer_gdl_init.sh"
  "${CMAKE_CURRENT_BINARY_DIR}/graffer_gdl_init.csh"
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/graffer
)
