# LICENCE:
# Copyright (C) 1995-2021: SJT
# This program is free software; you can redistribute it and/or modify  
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or     
#(at your option) any later version.                                   

install(FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/3floppy_unmount.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/custom.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/Graffer.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/Graffer.xpm"
  "${CMAKE_CURRENT_SOURCE_DIR}/omit.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps0.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps10.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps11.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps12.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps13.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps14.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps15.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps16.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps17.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps18.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps1.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps2.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps3.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps4.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps5.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps6.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps7.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps8.xbm"
  "${CMAKE_CURRENT_SOURCE_DIR}/ps9.xbm"
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/graffer/lib/bitmaps
  )
