# LICENCE:
# Copyright (C) 1995-2021: SJT
# This program is free software; you can redistribute it and/or modify  
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or     
#(at your option) any later version.                                   

install(FILES
  "${CMAKE_CURRENT_SOURCE_DIR/graff_2d__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_data__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_define__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_funct__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_hard__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_ids__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_key__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_opts__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_pfunct__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_style__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_text__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_trans__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_xydata__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_zdata__define.pro"
  "${CMAKE_CURRENT_SOURCE_DIR/graff_zfunct__define.pro"
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/graffer/lib/definitions
  )
