# LICENCE:
# Copyright (C) 1995-2021: SJT
# This program is free software; you can redistribute it and/or modify  
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or     
#(at your option) any later version.                                   

install(FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_ch_dset.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_docs.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_draw.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_dump.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graffer.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_funct.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_just.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_make_dump.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_pfunct.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_rescale.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_set_vals.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_set_zvals.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_sort_dss.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_text.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_tlv.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_to_tlv.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_write.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_zfunct.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_append.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_app_w.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_axis_adv_menu.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_axis_menu.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_check_box.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_comment.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_cont_col_set.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_cont_menus.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_control_menu.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_cross_hair.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_curr_menu.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_custom_colour.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_ds_create.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_ds_menu.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_ds_menus.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_ds_pulldown.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_examine_tlv.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_fcopy_menu.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_fit_dset.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_fit_funct.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_font_list.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/grf_tlv_get.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_func_copy.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_hardopts.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_image_write.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_img_menus.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_key_def.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_mk_colour_bm.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_mk_plmenus.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_name_wid.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_opt_set.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_pick_tlv.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_position.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_present.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_psym_bitm.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_reg2norm.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_show_colour.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_state.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_str_fun.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_td_mode.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_tlv_z.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_tm_opts.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_xycopy_menu.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_xy_copy.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_xy_wid.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_zcopy_menu.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_z_copy.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_z_menus.pro"
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/graffer/lib/gui
  )
