# LICENCE:
# Copyright (C) 1995-2021: SJT
# This program is free software; you can redistribute it and/or modify  
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or     
#(at your option) any later version.                                   

install(FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_clear.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_colours.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_decode_xy.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_dsdel.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_get.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_get_rec.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_have_gui.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_init.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_msg.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_open.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_put_rec.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/graff_save.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_ang_pts.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_asc_save.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_as_xa.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_as_xr.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_as_ya.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_as_yr.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_auto_delete.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_autoscale.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_ds.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_ds_v3.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_save.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_txt.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_bin_txt_v3.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_byt_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_byt_val.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_cf_pieces.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_cont_col_get.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_dbl_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_dbl_val.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_err_type.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_find_program.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_find_viewer.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_flt_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_flt_val.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_fun_read.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_asc.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_bin.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_bin_v3.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_ds.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_page.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_txt.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_get_v1.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_int_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_int_val.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_lon_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_lon_val.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_make_levels.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_nearest.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_n_errors.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_new_ds.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_pieces.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_pol_rect.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_pwfit.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_rc_get.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_split_dir.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_str_put.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_str_rd.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_str_val.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_write_ds.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_xy_extract.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_xy_read.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_xy_replace.pro"
  "${CMAKE_CURRENT_SOURCE_DIR}/gr_z_read.pro"
  DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/graffer/lib/lib
  )
